--- a/platformio.ini
+++ b/platformio.ini
@@ -8,14 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-; [env:uno]
-; platform = atmelavr
-; board = uno
-; framework = arduino
-
 [env:nodemcuv2]
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
 monitor_speed = 115200
 
+; [env:ATmega2560]
+; platform = atmelavr
+; board = ATmega2560
+; framework = arduino
